--- a/partner.html
+++ b/partner.html
@@ -121,7 +121,7 @@
                 <div class="row agency_featured_item flex-row-reverse">
                     <div class="col-lg-6">
                         <div class="agency_featured_img text-right wow fadeInRight" data-wow-delay="0.4s">
-                            <img src="img/home4/work1.png" alt="">
+                            <img src="img/home4/picture1.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -136,7 +136,7 @@
                 <div class="row agency_featured_item agency_featured_item_two">
                     <div class="col-lg-6">
                         <div class="agency_featured_img text-right wow fadeInLeft" data-wow-delay="0.3s">
-                            <img src="img/home4/work2.png" alt="">
+                            <img src="img/home4/picture2.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -151,7 +151,7 @@
                 <div class="row agency_featured_item flex-row-reverse">
                     <div class="col-lg-6">
                         <div class="agency_featured_img text-right wow fadeInRight" data-wow-delay="0.3s">
-                            <img src="img/home4/work3.png" alt="">
+                            <img src="img/home4/picture3.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-6">
