--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-lg-7">
                     <div class="app_banner_contentmt mt_40">
                         <h2 class="f_p f_700 f_size_50 w_color mb_20 wow fadeInLeft" data-wow-delay="0.2s">Promote the <br> brands you love</h2>
-                        <p class="f_300 f_size_18 l_height30 w_color wow fadeInLeft" data-wow-delay="0.3s">It doesn't matter how many followers you have. <br> Get your individual coupon code and start promoting!</p>
+                        <p class="f_300 f_size_18 l_height30 w_color wow fadeInLeft" data-wow-delay="0.3s">It doesn't matter how many followers you have. <br> Join us, get your individual coupon code and start promoting!</p>
                         <a href="http://eepurl.com/gblv5T" target="_blank" class="btn_hover mt_30 app_btn wow fadeInLeft" data-wow-delay="0.5s">Join Us!</a>
                     </div>
                 </div>
