:wrench: Fix position of images for responsive design

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="app_img">
-                        <img class="app_screen one wow fadeInDown" src="img/home7/01.png" alt="">
-                        <img class="app_screen two wow fadeInDown" src="img/home7/03.png" alt="">
-                        <img class="app_screen three wow fadeInDown" src="img/home7/02.png" alt="">
-                        <img class="mobile" src="img/home7/app.png" alt="">
+                        <img class="fix-app-icons app_screen one wow fadeInDown" src="img/home7/01.png" alt="">
+                        <img class="fix-app-icons app_screen two wow fadeInDown" src="img/home7/03.png" alt="">
+                        <img class="fix-app-icons app_screen three wow fadeInDown" src="img/home7/02.png" alt="">
+                        <img class="fix-smartphone mobile" src="img/home7/app.png" alt="">
                     </div>
                 </div>
             </div>
