--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="icon s_icon_one"><i class="ti-user"></i></div>
                         <h4 class="f_600 f_size_20 l_height28 t_color2 mb_20">1. Join our <br> Community<br> </h4>
                         <p>Are you ready to join us? You only need your Instagram access datas to register on Hypact!</p>
-                        <img class="float-right" src="img\undraw_be_the_hero_ssr2.png" alt="">
+                        <img class="float-right" src="img\undraw_be_the_hero_ssr2.svg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 mb-30">
@@ -135,7 +135,7 @@
                         <div class="icon s_icon_two"><i class="ti-check"></i></div>
                         <h4 class="f_600 f_size_20 l_height28 t_color2 mb_20">2. Accept <br> campaigns<br> </h4>
                         <p>Accept campaigns of brands you like the most. After that you will get an individual discount code.</p>
-                        <img class="float-right" src="img\undraw_agreement_aajr.png" alt="">
+                        <img class="float-right" src="img\undraw_agreement_aajr.svg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 mb-30">
@@ -143,7 +143,7 @@
                         <div class="icon s_icon_three"><i class="ti-mobile"></i></div>
                         <h4 class="f_600 f_size_20 l_height28 t_color2 mb_20">3. Start <br> promoting<br> </h4>
                         <p>Generate brand related content on your favorite networks. Just be creative in promoting!</p>
-                        <img class="float-right" src="img\undraw_social_dashboard_k3pt.png" alt="">
+                        <img class="float-right" src="img\undraw_social_dashboard_k3pt.svg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 mb-30">
@@ -151,7 +151,7 @@
                         <div class="icon s_icon_four"><i class="ti-money"></i></div>
                         <h4 class="f_600 f_size_20 l_height28 t_color2 mb_20">4. Receive <br> commission<br> </h4>
                         <p>You will get a commission rate for every purchase via your personalized coupon code.</p>
-                        <img class="float-right" src="img\undraw_make_it_rain_iwk4.png" alt="">
+                        <img class="float-right" src="img\undraw_make_it_rain_iwk4.svg" alt="">
                     </div>
                 </div>
             </div>
